# stoat

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: full_test.yml  single_test.yml
stoat/: __init__.py  analysis.py  clustering.py  functions.py  plotting.py  run_stoat.py  stoat.py  stoat_analysis.py  stoat_plotting.py
tests/: test_stoat.py
